# rdius-ui

./: .env.example  .gitignore  CLAUDE.md  docker-compose.override.yml  docker-compose.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
backend/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_create_app_users.py  002_add_servers_and_audit_log.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: app_users.py  audit.py  auth.py  dashboard.py  logs.py  nas.py  radius_groups.py  radius_users.py  router.py  servers.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/models/: app.py  radius.py
backend/app/schemas/: app_users.py  audit.py  auth.py  dashboard.py  logs.py  radius.py  server.py
backend/app/services/: audit_service.py  auth_service.py  dashboard_service.py  docker_service.py  log_service.py  radius_service.py  server_service.py  user_service.py
backend/sql/: materialized_views.sql
backend/tests/: conftest.py  test_auth_endpoints.py  test_dashboard.py  test_logs.py  test_radius_endpoints.py  test_radius_schemas.py  test_radius_service.py  test_rbac.py  test_security.py
frontend/: Dockerfile  Dockerfile.dev  next.config.ts  package-lock.json  package.json  warmup.sh
frontend/src/: middleware.ts
infra/freeradius/: Dockerfile  clients.conf  radiusd.conf
infra/loadgen/: Dockerfile  generate-traffic.sh
(+77 files in other folders)
